# rustserver

./: Cargo.toml  README.md
src/: data.db  index.html  main.rs  texts.db
static/: index.html  index.js
